<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_bg" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/main_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="289dp"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_round"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/hint_user_username"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/spacing_middle"
            android:background="@drawable/edit_round"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/hint_user_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/spacing_middle"
            android:background="@drawable/button_round"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_have_account"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_page_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_middle"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <TextView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/spacing_xxlarge"
            android:gravity="center"
            android:text="@string/app_tag_line"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>