<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipToPadding="false"
    android:scrollbars="vertical"
    android:scrollingCache="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_weight="1">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@color/grey_40" />

            <LinearLayout
                android:id="@+id/layout_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/spacing_middle"
                android:gravity="end|center_vertical"
                android:orientation="horizontal" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_middle"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_bid_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_40"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_middle"
            android:visibility="visible">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorPrice"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey_10"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingTop="@dimen/spacing_medium"
                android:paddingRight="@dimen/spacing_middle"
                android:paddingBottom="@dimen/spacing_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_middle"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_bidder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_40"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_middle"
            android:paddingRight="@dimen/spacing_middle"
            android:paddingBottom="@dimen/spacing_middle"
            android:visibility="visible">

            <TextView
                android:id="@+id/winner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_80" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_text_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_middle"
            android:paddingRight="@dimen/spacing_middle"
            android:paddingBottom="@dimen/spacing_middle"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_40"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_middle"
            android:paddingRight="@dimen/spacing_middle"
            android:paddingBottom="@dimen/spacing_middle"
            android:visibility="invisible">

            <TextView
                android:id="@+id/remaining_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorRemainingTime"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_middle"
            android:paddingRight="@dimen/spacing_middle"
            android:paddingBottom="@dimen/spacing_middle"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:text="@string/auction_start_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_40"
                tools:ignore="RtlCompat" />

            <ImageView
                android:layout_width="@dimen/spacing_large"
                android:layout_height="@dimen/spacing_large"
                android:src="@drawable/ic_date"
                app:tint="@color/grey_40" />

            <TextView
                android:id="@+id/startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="-"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_40" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_middle"
            android:paddingRight="@dimen/spacing_middle"
            android:paddingBottom="@dimen/spacing_middle"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:text="@string/auction_end_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_40"
                tools:ignore="RtlCompat" />

            <ImageView
                android:layout_width="@dimen/spacing_large"
                android:layout_height="@dimen/spacing_large"
                android:src="@drawable/ic_date"
                app:tint="@color/grey_40" />

            <TextView
                android:id="@+id/endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:text="-"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_40" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/grey_5" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/spacing_middle"
            android:paddingBottom="@dimen/spacing_large">

            <WebView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/grey_5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/grey_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:text="@string/basic_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_40"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/basicPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrice"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>